# machine-learning-in-chess

./: .gitignore  README.md  analysis_prototype.py  pyproject.toml  requirements.txt
docs/Demonstration/: Presentation - Machine Learning to Study Patterns in Chess Games.pptx  ~$Presentation - Machine Learning to Study Patterns in Chess Games.pptx
docs/Final Report/: main.bib  main.tex  main.toc
docs/Literature Review/: main.bib  main.tex
docs/Literature Review - Machine Learning in Chess/: ieeetr.bst  main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.xdv
docs/Meeting Minutes/: M1 - Initial Meeting.md  M10 - Processing Data.md  M11 - Structure of Final Report.md  M12 - Investigating Data Pipeline.md  M13 - Improving Data Pipeline.md  M14 - Finalising Data Pipeline.md  M15 - Improving Final Report.md  M16 - Expanding on Data Exploration.md  M17 - Finding Correlations.md  M18 - Starting ML.md  M19 - Implementing Classifiers.md  M2 - First Steps.md  M20 - Evaluating Classifiers.md  M21 - Evaluating Clusters and Regression Analysis.md  M22 - Draft of Final Report and Demo.md  M3 - Project Kickoff.md  M4 - Initial Findings.md  M5 - Planning Literature Review.md  M6 - Initial Draft of Literature Review.md  M7 - Expanding Draft of Literature Review.md  M8 - Adding Preliminary Research to Literature Review.md  M9 - Final Review of Literature Review.md
docs/Plans/: P1 - Literature Review Plan.md  P2 - Project Plan.md  P3 - Final Report and Demonstration Plan.md
docs/Resources/: Gantt Chart - Project Development.gantt  (+1 more)
src/: analyse_chess_data.ipynb  analyse_csv_data.ipynb  analyse_csv_data.py  analysis_prototype.py  convert_csv_to_sqlite3.py  convert_pgn_to_csv.py  convert_pgn_to_parquet.py  merge_csv_files.py  query_with_scoutfish.py  split_pgn_file.sh
(+80 files in other folders)
